[√] fixes document not scrollable on Firefox

--- a/docs/style/_doc-content.scss
+++ b/docs/style/_doc-content.scss
@@ -3,6 +3,7 @@
 
   @media (min-width: 641px) {
     flex-direction: row;
+    overflow: hidden;
   }
 
   @media (max-width: 640px) {
